@@ -1,3 +1,12 @@
+2010-09-23  Peter Rosin  <peda@lysator.liu.se>
+
+	msvc: don't try to export import descriptors.
+	* libltdl/m4/libtool.m4 (_LT_LINKER_SHLIBS) [cygwin, mingw]
+	[pw32, cegcc] <cl*, exclude_expsyms>: Don't export symbols in
+	import libraries related to describing what dll(s) the import
+	library is importing. Fixes problem in tests/demo-make.test
+	and some other tests.
+
 2010-09-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix regression in command-line length computation.
